--- a/80_userspace_timer_hrtimer/Makefile
+++ b/80_userspace_timer_hrtimer/Makefile
@@ -1,4 +1,4 @@
-obj-m += gpio_irq_signal.o
+obj-m += userspace_timer_hrtimer.o
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
